fix hard to read color during :hover

--- a/LEAF_Request_Portal/css/style.css
+++ b/LEAF_Request_Portal/css/style.css
@@ -411,6 +411,14 @@ table.table {
     color: white;
 }
 
+.table_editable:hover a {
+    color: white;
+}
+
+.table_editable:hover>.browsetypes {
+    color: white;
+}
+
 .table_priority {
     cursor: pointer;
 }
